update report 2